@@ -14,6 +14,8 @@ ngIRCd 0.10.x
 
   - Fixed validation of server names containing digits.
   - Update info text of local server after re-reading configuration.
+  - New configuration option "PredefChannelsOnly": if set, clients can
+   only join predefined channels.
 
 ngIRCd 0.10.0 (2006-10-01)
 
@@ -666,4 +668,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.302.2.6 2006/11/10 10:06:14 alex Exp $
+$Id: ChangeLog,v 1.302.2.7 2006/12/02 13:10:44 fw Exp $
